slider-range + side page navigation + corrections from designer + header search animation

--- a/src/blocks/action-btn/action-btn.pug
+++ b/src/blocks/action-btn/action-btn.pug
@@ -19,4 +19,4 @@ mixin action-btn(font, icon, mods)
     }
 
   button.action-btn(class=allMods)&attributes(attributes)
-    i(class="fa-" + font + " fa-"+icon)
+    .action-btn__inner
