--- a/src/blocks/product-info/product-info.pug
+++ b/src/blocks/product-info/product-info.pug
@@ -59,4 +59,7 @@ mixin product-info-view(props={}, mods)
 
   .product-info__view.slider__item(class=allMods)&attributes(attributes)
     .product-info__view-inner
-      .product-info__view-content.cloudimage-360#gurkha-suv(data-folder="img/3d/" data-filename-x="{index}_rikta_3d_w500.jpg" data-amount-x="36")
+      .product-info__view-content.cloudimage-360#gurkha-suv(data-folder="img/3d/" data-filename-x="{index}_rikta_3d_w500.jpg" data-amount-x="36" data-keys="true" data-bottom-circle)
+        // .cloudimage__buttons
+        //   button.cloudimage-360-left cloudimage-360-left
+        //   button.cloudimage-360-right cloudimage-360-right
