--- a/src/scss/test.scss
+++ b/src/scss/test.scss
@@ -1,4 +1,8 @@
 
+// .search-form__input-wrapper {
+//   outline: 1px solid red;
+// }
+
 // body  * {
 //   background-color: transparent !important;
 //   outline: 1px solid red;
@@ -8,16 +12,36 @@
 //   outline: 2px solid green !important;
 // }
 
-// // .page-header {
-// //   display: none !important;
-// // }
-
 // img {
 //   opacity: 0;
 // }
 
 // video {
 //   opacity: 0 !important;
+// }
+
+// .cart__inner {;
+//   max-width: none;
+// }
+
+// .cart__section {
+//   max-width: none;
+// }
+
+
+
+// .page-header {
+//   display: none !important;
+// }
+
+// .tns-controls button {
+//   outline: 1px solid red;
+//   background-color: transparent !important;
+// }
+
+// .product-info__view-content {
+//   opacity: 0;
+//   outline: 1px solid green;
 // }
 
 // .product-info__view-inner {
