--- a/src/blocks/areas/areas.scss
+++ b/src/blocks/areas/areas.scss
@@ -6,8 +6,10 @@
 
   $block-name: &; // #{$block-name}__element
 
+  position: relative;
+
   &__inner {
-    @media (min-width: $screen-xl) {
+    @media (min-width: $screen-lg) {
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
       grid-template-rows: 1fr 1fr;
@@ -15,16 +17,44 @@
     }
   }
 
+  &__item {
+    display: block;
+  }
+
   &__img {
     position: relative;
     height: 236px;
     border-radius: 4px;
     overflow: hidden;
+    transition: background $transition-time-img;
+
+    &::after {
+      content: '';
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2));
+      opacity: 0;
+      transition: opacity $transition-time;
+
+      #{$block-name}__item:hover & {
+        opacity: 1;
+      }
+    }
 
     img {
+      position: relative;
       width: 100%;
       height: 100%;
       object-fit: cover;
+      z-index: -1;
+      transition: transform $transition-time-img;
+
+      #{$block-name}__item:hover & {
+        transform: scale(1.1);
+      }
     }
   }
 
@@ -38,6 +68,11 @@
     border-radius: 78px;
     font-size: 18px;
     line-height: 28px;
+    transition: transform 600ms;
+
+    #{$block-name}__item:hover & {
+      transform: translateX(-200%);
+    }
   }
 
   @mixin range-thumb {
@@ -59,40 +94,40 @@
 
   &__range {
     width: 100%;
-    -webkit-appearance: none;
+    // -webkit-appearance: none;
 
-    &::-moz-range-thumb {
-      @include range-thumb;
-    }
+    // &::-moz-range-thumb {
+    //   @include range-thumb;
+    // }
 
-    &::-webkit-slider-thumb {
-      -webkit-appearance: none;
-      width: 53px;
-      height: 0;
-      cursor: pointer;
-      background-color: $tw-black;
-      padding: 1px 0;
-    }
+    // &::-webkit-slider-thumb {
+    //   -webkit-appearance: none;
+    //   width: 53px;
+    //   height: 0;
+    //   cursor: pointer;
+    //   background-color: $tw-black;
+    //   padding: 1px 0;
+    // }
 
-    &::-ms-thumb {
-      @include range-thumb;
-    }
+    // &::-ms-thumb {
+    //   @include range-thumb;
+    // }
 
-    &::-moz-range-track {
-      @include range-track;
-    }
+    // &::-moz-range-track {
+    //   @include range-track;
+    // }
 
-    &::-webkit-slider-runnable-track {
-      -webkit-appearance: none;
-      @include range-track;
-    }
+    // &::-webkit-slider-runnable-track {
+    //   -webkit-appearance: none;
+    //   @include range-track;
+    // }
 
-    &::-ms-track {
-      @include range-track;
-    }
+    // &::-ms-track {
+    //   @include range-track;
+    // }
 
     @media (min-width: 700px) {
-      display: none;
+      display: none !important;
     }
   }
 
