--- a/src/blocks/article-preview/article-preview.scss
+++ b/src/blocks/article-preview/article-preview.scss
@@ -6,6 +6,14 @@
 
   $block-name: &; // #{$block-name}__element
 
+  &.slider__item {
+    flex-shrink: 0;
+  }
+
+  &__list-wrapper {
+    position: relative;
+  }
+
 
   &__inner {
     border-radius: 4px;
@@ -16,20 +24,30 @@
   &__img {
     max-width: 100%;
     height: 179px;
+    overflow: hidden;
 
     @media (min-width: 480px) {
       height: 335px;
     }
 
-    @media (min-width: $screen-md) {
-      height: auto;
+    // @media (min-width: $screen-md) {
+    //   height: auto;
+    // }
 
+    &:hover {
+      img {
+        transform: scale(1.1);
+      }
     }
 
     img {
       width: 100%;
       height: 100%;
       object-fit: cover;
+      transition: transform $transition-time-img;
+
+      #{$block-name}__img:hover &{
+      }
     }
   }
 
