--- a/src/blocks/hours/hours.pug
+++ b/src/blocks/hours/hours.pug
@@ -19,5 +19,5 @@ mixin hours(mods)
     }
 
   .hours.text-sm.text-gray-500(class=allMods)&attributes(attributes)
-    span пн.-пт
+    span пн-пт
     span 10:00 - 18:00
