--- a/src/blocks/logo/logo.scss
+++ b/src/blocks/logo/logo.scss
@@ -9,6 +9,12 @@
   display: inline-block;
   white-space: nowrap;
 
+  &:hover,
+  &:focus,
+  &:active {
+    opacity: 0.7;
+  }
+
   img {
     display: block;
   }
