--- a/src/blocks/main-nav/main-nav.data.pug
+++ b/src/blocks/main-nav/main-nav.data.pug
@@ -24,21 +24,16 @@
     },
     {
       "id": "10",
-      "name": "Технологии",
-      "url": "/tech"
-    },
-    {
-      "id": "20",
       "name": "Всё о лечении",
       "url": "/cure"
     },
     {
-      "id": "30",
+      "id": "20",
       "name": "О компании",
       "url": "/about",
       "childs": [
         {
-          "id": "30-0",
+          "id": "20-0",
           "name": "Наша дятельность",
           "url": "about/1",
           // "childs": [{
@@ -48,24 +43,54 @@
           // }]
         },
         {
-          "id": "30-10",
+          "id": "20-10",
           "name": "Учёный совет",
           "url": "about/2",
         },
         {
-          "id": "30-20",
+          "id": "20-20",
           "name": "Клинические базы",
+          "url": "about/3"
+        },
+        {
+          "id": "20-30",
+          "name": "Спортивные базы",
+          "url": "about/3"
+        },
+        {
+          "id": "20-40",
+          "name": "История",
+          "url": "about/3"
+        },
+        {
+          "id": "20-50",
+          "name": "Нематериальные активы",
+          "url": "about/3"
+        },
+        {
+          "id": "20-60",
+          "name": "Патенты и свидетельства",
+          "url": "about/3"
+        },
+        {
+          "id": "20-70",
+          "name": "Образование и обучение",
+          "url": "about/3"
+        },
+        {
+          "id": "20-80",
+          "name": "Новости",
           "url": "about/3"
         },
       ]
     },
       {
-      "id": "40",
+      "id": "30",
       "name": "Отзывы",
       "url": "/reviews"
     },
       {
-      "id": "50",
+      "id": "40",
       "name": "Контакты",
       "url": "/contacts"
     },
