--- a/src/blocks/page-header/page-header.pug
+++ b/src/blocks/page-header/page-header.pug
@@ -17,6 +17,6 @@ mixin page-header(mods)
       }
     }
 
-  header.page-header(class=allMods, role='banner')&attributes(attributes)
+  header.page-header.first-page(class=allMods, role='banner')&attributes(attributes)
     .page-header__inner.container
       block
