--- a/src/blocks/page-header/page-header.scss
+++ b/src/blocks/page-header/page-header.scss
@@ -11,6 +11,10 @@
   background-color: #fff;
   border-bottom: 1px solid $tw-gray-200;
 
+  &.first-page {
+    border-color: #fff;
+  }
+
   @media (min-width: $screen-xxl) {
     min-height: 90px;
   }
