--- a/src/blocks/pages/pages.scss
+++ b/src/blocks/pages/pages.scss
@@ -27,15 +27,34 @@
   }
 
   &__line {
+    position: relative;
+    display: block;
     height: 1px;
     width: 100%;
+    height: 27px;
     max-width: 10px;
-    margin-bottom: 25px;
-    background-color: $tw-black;
     transition: max-width 0.1s;
+    cursor: pointer;
 
+    &:hover,
     &.active {
       max-width: 30px;
+    }
+
+    &:focus {
+      border: none;
+      outline: none;
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 50%;
+      height: 1px;
+      background-color: $tw-black;
+      transform: translateY(-50%);
     }
   }
 
