--- a/src/blocks/product-actions/product-actions.pug
+++ b/src/blocks/product-actions/product-actions.pug
@@ -20,8 +20,10 @@ mixin product-actions(mods)
 
   .product-actions(class=allMods)&attributes(attributes)
     +btn('Подробнее','regular')(class="border-gray-200")
-    +btn('<i class="fa-solid fa-cart-shopping"></i><span>Купить</span>','regular, icon')
-    +btn('','fav')
-      i.fa-regular.fa-heart
-    +btn('','compare')
-      i.fa-solid.fa-arrow-right-arrow-left
+    +btn(
+      '<svg class="icon" width="18" height="18"><use xlink:href="img/sprite.svg#cart"></use></svg> <span>Купить</span>',
+      'regular, icon, cart-add')(data-content="Добавлено")
+    +btn('','fav, fav-add')
+      +svg('heart-full','',{width: '22', height: '21'})
+    +btn('','compare, compare-add')
+      +svg('arrows-left-right','',{width: '18', height: '23'})
