--- a/src/blocks/product-actions/product-actions.scss
+++ b/src/blocks/product-actions/product-actions.scss
@@ -27,11 +27,58 @@
 
 
   .btn {
-    margin-right: 5px;
     flex-shrink: 0;
+    margin-right: 6px;
 
-    &:last-child {
+    @media (min-width: $screen-xl) {
+      margin-right: 10px;
+    }
+
+    &:last-of-type {
       margin-right: 0;
+    }
+
+    // .product-card & {
+
+    //   &:last-of-type {
+    //     margin-right: 0;
+    //   }
+    // }
+  }
+
+  .btn--fav {
+
+    &:hover,
+    &:focus,
+    &:active {
+      opacity: 0.3;
+    }
+  }
+
+  .btn--in-fav {
+
+    &:hover,
+    &:focus,
+    &:active {
+      opacity: 1;
+    }
+  }
+
+  .btn--compare {
+
+    &:hover,
+    &:focus,
+    &:active {
+      opacity: 0.3;
+    }
+  }
+
+  .btn--in-compare {
+
+    &:hover,
+    &:focus,
+    &:active {
+      opacity: 1;
     }
   }
 
@@ -51,9 +98,65 @@
 
     .product-info & {
       @media (min-width: $screen-xxl) {
-        margin-right: 15px !important;
+        margin-right: 18px !important;
       }
     }
   }
 
+
+  .product-card & {
+    .btn--regular {
+      padding: 6px 16px;
+    }
+
+    .btn--compare {
+      @media (min-width: $screen-xxl) {
+        margin-right: 10px !important;
+      }
+    }
+  }
+
+
+
+}
+
+
+.tooltip {
+
+  border-radius: 4px;
+  background-color: #fff;
+  box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.1);
+
+  ul {
+    margin-bottom: 0;
+    padding-left: 0;
+  }
+
+  li {
+    padding-bottom: 10px;
+    border-bottom: 1px solid $tw-gray-200;
+
+    &:last-child {
+      padding-top: 10px;
+      padding-bottom: 0;
+      border: none;
+    }
+  }
+
+  a {
+    color: inherit;
+  }
+
+  &--actions {
+    min-width: 175px;
+    padding: 10px 16px;
+    @apply text-base;
+    font-weight: 400;
+    color: $tw-gray-500;
+
+    span {
+      font-weight: 700;
+      color: $tw-blue;
+    }
+  }
 }
