--- a/src/blocks/product-card/product-card.scss
+++ b/src/blocks/product-card/product-card.scss
@@ -18,16 +18,27 @@
 
   &__img {
     height: 200px;
+    overflow: hidden;
+    cursor: pointer;
 
     img {
       width: 100%;
       height: 100%;
       object-fit: cover;
+      transition: transform $transition-time-img;
     }
 
     @media (min-width: $screen-xxl) {
       height: 242px;
+
+      &:hover {
+        img {
+          transform: scale(1.1);
+        }
+      }
     }
+
+
   }
 
   &__title {
@@ -37,6 +48,13 @@
     font-size: 18px;
     line-height: 28px;
     color: $tw-black;
+
+    &:hover,
+    &:focus,
+    &:active {
+      color: currentColor;
+      opacity: 0.7;
+    }
   }
 
   &__desc {
@@ -85,4 +103,5 @@
       margin-right: 5px !important;
     }
   }
+
 }
