--- a/src/blocks/product-info/product-info.scss
+++ b/src/blocks/product-info/product-info.scss
@@ -6,6 +6,15 @@
 
   $block-name: &; // #{$block-name}__element
 
+  position: relative;
+
+  @media (min-width: $screen-md) {
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    grid-template-columns: 360px 1fr;
+    gap: 0 30px;
+  }
+
   @media (min-width: $screen-lg) {
     display: grid;
     grid-template-rows: auto 1fr auto;
@@ -28,7 +37,7 @@
   &__views-wrapper {
     margin-top: 20px;
 
-    @media (min-width: $screen-lg) {
+    @media (min-width: $screen-md) {
       margin-top: 0;
       grid-column-start: 1;
       grid-row-start: 1;
@@ -40,7 +49,7 @@
     display: flex !important;
     flex-direction: column;
 
-    @media (min-width: $screen-lg) {
+    @media (min-width: $screen-md) {
       grid-column-start: 2;
       margin-top: 10px;
       overflow: hidden;
@@ -50,7 +59,7 @@
   &__list {
     margin-top: 20px;
 
-    @media (min-width: $screen-lg) {
+    @media (min-width: $screen-md) {
       margin-top: 0;
     }
   }
@@ -60,15 +69,25 @@
   &__view {
     height: 342px;
 
-    @media (min-width: $screen-lg) {
+    @media (min-width: $screen-md) {
       display: flex;
-      min-height: 771px;
       background-color: $tw-gray-100;
+      height: 100%;
+    }
+
+    @media (min-width: $screen-lg) {
+      min-height: 771px;
     }
   }
 
   &__view-inner {
     background-color: $tw-gray-100;
+
+    @media (min-width: $screen-md) {
+      display: flex;
+      align-items: center;//!!!
+      height: 100%;
+    }
 
     @media (min-width: $screen-lg) {
       margin-left: auto;
@@ -90,7 +109,7 @@
     line-height: 30px;
     color: $tw-black;
 
-    @media (min-width: $screen-lg) {
+    @media (min-width: $screen-md) {
       margin-top: 0;
       font-size: 24px;
       line-height: 34px;
@@ -105,7 +124,7 @@
       height: 100%;
     }
 
-    @media (min-width: $screen-lg) {
+    @media (min-width: $screen-md) {
       display: grid !important;
       grid-template-rows: auto auto auto auto;
       grid-template-columns: 1fr auto;
@@ -122,7 +141,7 @@
     font-size: 14px;
     line-height: 24px;
 
-    @media (min-width: $screen-lg) {
+    @media (min-width: $screen-md) {
       grid-row-start: 2;
       grid-row-end: 3;
     }
@@ -134,7 +153,7 @@
     line-height: 28px;
     color: $tw-black;
 
-    @media (min-width: $screen-lg) {
+    @media (min-width: $screen-md) {
       margin-top: 0;
       margin-right: 12px;
       grid-row-start: 1;
@@ -145,7 +164,7 @@
   }
 
   &__features {
-    @media (min-width: $screen-lg) {
+    @media (min-width: $screen-md) {
       grid-row-start: 3;
       grid-column-start: 1;
       grid-column-end: 3;
@@ -154,5 +173,21 @@
 
   &--product-info {
     margin-top: auto;
+  }
+
+  &__range {
+    width: 100%;
+
+    &::-moz-range-thumb {
+      width: 33%;
+    }
+
+    &::-webkit-slider-thumb {
+      width: 33%;
+    }
+
+    &::-ms-thumb {
+      width: 33%;
+    }
   }
 }
