--- a/src/blocks/reviews/reviews.pug
+++ b/src/blocks/reviews/reviews.pug
@@ -37,7 +37,7 @@ mixin reviews(text, mods)
                 name: 'Туманина Вера',
                 info: 'С. Федосеевка'
               })(class="slider__item")
-              h3.text-xl.lg_text-2xl.lg_mt-0.xxl_mb-20px Рикта - мой помощник и спаситель
+              a.text-xl.text-black.lg_text-2xl.lg_mt-0.xxl_mb-20px.hover_opacity-70(href="#") Рикта - мой помощник и спаситель
               .reviews__item-text.ellipsis(data-lines='10')
                 p.reviews__item-excerpt В 1998 г. я очень сильно болела. Постоянно болела спина, ноги из-за двух межпозвонковых грыж. Я с большим трудом передвигалась, совсем не могла сидеть из-за усиливающихся болей. Я постоянно проходила курсы лечения, но боли продолжались, и мне настойчиво предлагали сделать операцию.
                 p От знакомой узнала, что в соседнем небольшом городке Звенигово Республики Марий Эл работает врач, который кроме стандартного лечения применяет чудо-аппарат. Я решила попробовать полечиться этим аппаратом.
@@ -48,7 +48,7 @@ mixin reviews(text, mods)
                 name: 'Туманина Вера 2',
                 info: 'С. Федосеевка'
               })(class="slider__item")
-              h3.text-xl.lg_mt-0 Рикта - мой помощник и спаситель
+              a.text-xl.text-black.lg_text-2xl.lg_mt-0.xxl_mb-20px.hover_opacity-70(href="#") Рикта - мой помощник и спаситель
               .reviews__item-text.ellipsis(data-lines='10')
                 p.reviews__item-excerpt В 1998 г. я очень сильно болела. Постоянно болела спина, ноги из-за двух межпозвонковых грыж. Я с большим трудом передвигалась, совсем не могла сидеть из-за усиливающихся болей. Я постоянно проходила курсы лечения, но боли продолжались, и мне настойчиво предлагали сделать операцию.
             +reviews-user-item(
