--- a/src/blocks/reviews/reviews.scss
+++ b/src/blocks/reviews/reviews.scss
@@ -6,12 +6,18 @@
 
   $block-name: &; // #{$block-name}__element
 
+  position: relative;
+
+  @media (min-width: $screen-lg) {
+    margin-top: 15px;
+  }
+
   &__tab-select-wrapper {
     margin-top: 20px;
     margin-bottom: 0;
 
-    @media (min-width: $screen-xxl) {
-      margin-top: 15px;
+    @media (min-width: $screen-md) {
+      margin-top: 0;
     }
   }
 
@@ -20,6 +26,7 @@
   }
 
   &__item {
+    cursor: pointer;
     .btn {
       @media (min-width: $screen-lg) {
         grid-column-start: 2;
@@ -44,6 +51,7 @@
   }
 
   &__item-author {
+    //!!!
     display: grid;
     grid-template-columns: auto 1fr;
     grid-template-rows: auto auto;
@@ -54,7 +62,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-right: 30px;
+      margin-right: 40px;
     }
   }
 
@@ -135,18 +143,37 @@
     display: block;
   }
 
-  &__item-exerpt {}
-
-  .tab-pane {
-    position: relative;
-  }
 
   .tns-controls {
     top: -115px;
 
     @media (min-width: $screen-xxl) {
       top: -80px;
-      right: 40px;
+      right: 20px;
+    }
+  }
+
+//!!!
+  .tab-pane {
+    position: relative;
+  }
+
+  .tab-content {
+    margin-top: 20px;
+  }
+
+  .nav-tabs {
+    position: relative;
+
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      height: 1px;
+      width: 80%;
+      background-color: $tw-gray-200;
+      z-index: -1;
     }
   }
 
