--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -63,7 +63,7 @@
   // border-bottom: var(--#{$prefix}nav-tabs-border-width) solid var(--#{$prefix}nav-tabs-border-color);
 
   .nav-item:first-child .nav-link {
-    padding-left: 0;
+    margin-left: 0;
   }
 
   .nav-link {
@@ -71,7 +71,8 @@
     background: none;
     // border-bottom: var(--#{$prefix}nav-tabs-border-width) solid var(--#{$prefix}nav-tabs-border-color);
     display: block;
-    padding: var(--#{$prefix}nav-link-padding-y) var(--#{$prefix}nav-link-padding-x);
+    padding: var(--#{$prefix}nav-link-padding-y) 0;
+    margin: 0 var(--#{$prefix}nav-link-padding-x);
     @include font-size(var(--#{$prefix}nav-link-font-size));
     font-weight: var(--#{$prefix}nav-link-font-weight);
     color: var(--#{$prefix}nav-link-color);
