--- a/src/scss/_tailwind-colours.scss
+++ b/src/scss/_tailwind-colours.scss
@@ -16,7 +16,7 @@ $tw-emerald: undefined;
 $tw-teal: undefined; 
 $tw-cyan: undefined; 
 $tw-sky: undefined; 
-$tw-blue: undefined; 
+$tw-blue: #0075DA; 
 $tw-indigo: undefined; 
 $tw-violet: undefined; 
 $tw-purple: undefined; 
@@ -27,7 +27,7 @@ $tw-gray-50: #f9fafb;
 $tw-gray-100: #f5f5f5; 
 $tw-gray-200: #ebebeb; 
 $tw-gray-300: #D3D3D3; 
-$tw-gray-400: #9ca3af; 
+$tw-gray-400: #2D2D42; 
 $tw-gray-500: #686868; 
 $tw-gray-600: #4b5563; 
 $tw-gray-700: #374151; 
