--- a/src/scss/mixins/text-mixins.scss
+++ b/src/scss/mixins/text-mixins.scss
@@ -9,3 +9,18 @@
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+
+@mixin arrow-down {
+  content: '';
+  position: absolute;
+  right: 0;
+  top: 50%;
+  width: 6px;
+  height: 4px;
+  background-image: url('../img/angle-down.svg');
+  background-size: contain;
+  transform: translateY(-50%);
+  border: none;
+}
+
