--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -96,6 +96,7 @@ $field-padding-horizontal:    12px;
 $border-radius:               3px;
 $opacity:                     0.5;
 $transition-time:             0.3s;
+$transition-time-img:              0.6s;
 $shadow:                      0 4px 2px -2px rgba(0, 0, 0, 0.3);
 
 $menu-desktop-width:          $screen-lg;
